# compact-dawg

./: .clang-format  .gitignore  CMakeLists.txt  GEMNI.md  README.md
docs/: benchmarks-metrics.md  bitstring-analysis.md  compact-dawg-architecture.md  compact-dawg-baselines.md  dawg-benchmarks.md  dynamic-dawg-architecture.md  embeddings-datasets.md
lib/dawgdic/: COPYRIGHT.md  dictionary.h  packed-dictionary-unit.h
lib/ds-lib/: compact_vector.h
scripts/: _plot_style.py  gen_rq_ground_truth_1024d.py  gen_rq_queries_1024d.py  plot_bitstring_analysis.py  plot_dawg_sharing.py  plot_dawg_sweep.py  plot_dynamic_dawg_sweep.py  plot_rq_bench.py  run_rq_gen_and_bench.sh  truncate_embeddings.py
src/: compact_dawg.h  dawg_segmentation.h  dawg_sharing_analysis.h  dynamic_dawg.h
src/compact_dawg/: build.h  query_lex.h  query_spatial.h
src/dynamic_dawg/: build.h  query_lex.h
src/mdtrie/: bitmap_utils.h  compressed_bitmap.h  data_point.h  debug.h  defs.h  morton_key.h  ordered_types.h  profiling_points.cpp  profiling_points.h  tree_block.h  trie.h  trie_node.h
tests/: test_compact_dawg_core.cpp  test_compact_dawg_spatial_1024d.cpp  test_dawgdic_lexicographic.cpp  test_dynamic_dawg.cpp
tests/testdata/: keys.txt  test.dawg
tools/: analyze_bitstring_structure.cpp  bench_common.h  bench_dawg_rq.cpp  bench_dawg_sharing.cpp  bench_dawg_storage.cpp  bench_dawg_sweep.cpp  bench_dynamic_dawg_sweep.cpp  gen_rq_queries_exact10_1024d.cpp  linear_scan_rq.cpp
